format application properties and improve error message in wishlist API